# jamsearchengine

./: .gitignore  README.md  build.sh  deploy.sh  meson.build
config/: config.toml
include/: CrawlerConfig.hpp  HtmlParser.hpp  Page.hpp  PageDownloader.hpp  SQLiteHandler.hpp  Spider.hpp
src/: CrawlerConfig.cpp  HtmlParser.cpp  Page.cpp  PageDownloader.cpp  SQLiteHandler.cpp  Spider.cpp  main.cpp
subprojects/: googletest.wrap  sqlitecpp.wrap
tests/: CrawlerConfigTest.cpp  PageTest.cpp  meson.build  test_config.toml
web/: index.html  style.css
